[package]
name = "rwiki"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
crossterm = "0.27"
dirs = "5.0"
html2text = "0.11"
image = "0.25"
ratatui = "0.29"
ratatui-image = "8.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
textwrap = "0.16"
tokio = { version = "1", features = ["full"] }
